--- a/charts/oai-5g-core/oai-spgwu-tiny/templates/configmap.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/templates/configmap.yaml
@@ -10,6 +10,7 @@ data:
           FQDN = "oai-spgwu-tiny-svc";                    # only needed for 4g
           INSTANCE                       = 0;             # 0 is the default
           PID_DIRECTORY                  = "/var/run";    # /var/run is the default
+          LOG_LEVEL     = "{{ .Values.config.logLevel }}"
 
           INTERFACES :
           {
