--- a/charts/oai-5g-core/oai-udr/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-udr/templates/deployment.yaml
@@ -21,11 +21,10 @@ spec:
       imagePullSecrets:
         {{ toYaml .Values.imagePullSecrets | indent 8 }}
       containers:
+    {{- if .Values.includeTcpDumpContainer }}
       - name: tcpdump
         image: "{{ .Values.tcpdumpimage.repository }}:{{ .Values.tcpdumpimage.version }}"
         imagePullPolicy: {{ .Values.tcpdumpimage.pullPolicy }}
-        securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
         {{- if .Values.resources.define}}
         resources:
           requests:
@@ -35,21 +34,26 @@ spec:
             memory: {{ .Values.resources.tcpdump.limits.memory | quote }}
             cpu: {{ .Values.resources.tcpdump.limits.cpu | quote }}
         {{- end}}
+        securityContext:
+          {{- toYaml .Values.securityContext | nindent 12 }}
         {{- if .Values.start.tcpdump}}
         command:
           - /bin/sh
           - -c
-          - /usr/sbin/tcpdump -i any -w /pcap/oai-udr_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
+          - /usr/sbin/tcpdump -i any -w /pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
         {{- else}}
         command:
           - /bin/sleep
           - infinity
         {{- end}}
-        {{- if .Values.persistence.sharedvolume}}
+        {{- if .Values.includeTcpDumpContainer}}
+        {{- if .Values.persistent.sharedvolume}}
         volumeMounts:
-        - mountPath: "/pcap"
-          name: cn5g-pv
+        - mountPath: "/tmp/pcap"
+          name: cn5g-pvc
         {{- end}}
+        {{- end}}
+    {{- end }}
       - name: udr
         image: "{{ .Values.nfimage.repository }}:{{ .Values.nfimage.version }}"
         imagePullPolicy: {{ .Values.nfimage.pullPolicy }}
@@ -114,6 +118,11 @@ spec:
               configMapKeyRef:
                 name: {{ .Chart.Name }}-configmap
                 key: pidDirectory
+          - name: LOG_LEVEL
+            valueFrom:
+              configMapKeyRef:
+                name: {{ .Chart.Name }}-configmap
+                key: logLevel
           - name: USE_FQDN_DNS
             valueFrom:
               configMapKeyRef:
@@ -195,11 +204,13 @@ spec:
           - /bin/sleep
           - infinity
         {{- end}}
+      {{- if .Values.includeTcpDumpContainer}}
+      {{- if .Values.persistent.sharedvolume}}
       volumes:
-      {{- if .Values.persistence.sharedvolume}}
-      - name: cn5g-pv
-        persistenceVolumeClaim:
+      - name: cn5g-pvc
+        persistentVolumeClaim:
           claimName: cn5g-pvc
+      {{- end }}
       {{- end }}
       dnsPolicy: ClusterFirst
       restartPolicy: Always
