--- a/charts/oai-5g-ran/oai-gnb-cu/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu/values.yaml
@@ -43,19 +43,27 @@ start:
   gnbcu: true
   tcpdump: false
 
-# gNB needs two seperate interface one for ngap (N2) and other one for gtpu (N3) 
-# But for experimentation only one interface can be used. 
-# When you need multus:
-# 1. you want seperate interface for N2 and N3 
-# 2. You want static ip-address for N2 and N3 interface
-# 3. Different interfaces for different packets
- 
-multus:    # needed when gnB service will run on another interface rather than traditional eth0
-  create: false
-  IPadd: "172.21.10.16"
-  Netmask: "22"
-  defaultGateway: "172.21.11.254"
-  hostInterface: "ens2f0np0"      # Interface of the host machine on which this pod will be scheduled
+
+# cu needs three seperate interfaces one for ngap (N2), f1 and N3 
+multus:
+  f1Interface:
+    create: false
+    IPadd: "172.21.6.16"
+    Netmask: "22"
+    defaultGateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  n3Interface:
+    create: false
+    IPadd: "172.21.6.17"
+    Netmask: "22"
+    defaultGateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  n2Interface:
+    create: false
+    IPadd: "172.21.6.18"
+    Netmask: "22"
+    defaultGateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
 config:
   mountConfig: false          #If config file is mounted then please edit mount.conf in configmap.yaml properly 
