--- a/charts/oai-5g-ran/oai-nr-ue/templates/configmap.yaml
+++ b/charts/oai-5g-ran/oai-nr-ue/templates/configmap.yaml
@@ -3,6 +3,12 @@ kind: ConfigMap
 metadata:
   name: {{ .Chart.Name }}-configmap
 data:
-  {{- range $key, $val := .Values.config }}
-  {{ $key }}: {{ $val | quote }}
-  {{- end }}
+  nrue.conf: |
+      uicc0 = {
+      imsi = "{{ .Values.config.fullImsi }}";
+      key = "{{ .Values.config.fullKey }}";
+      opc= "{{ .Values.config.opc }}";
+      dnn= "{{ .Values.config.dnn }}";
+      nssai_sst="{{ .Values.config.nssaiSst }}";
+      nssai_sd="{{ .Values.config.nssaiSd }}";
+      }
