--- a/ci-scripts/charts/oai-udr/values.yaml
+++ b/ci-scripts/charts/oai-udr/values.yaml
@@ -51,6 +51,7 @@ config:
   tz: "Europe/Paris"
   instance: "0"
   udrname: "oai-udr"
+  logLevel: "debug"
   pidDirectory: "/var/run"
   logLevel: "debug"
   sbiIfName: "eth0"
