--- a/charts/oai-5g-core/oai-nrf/templates/pvc.yaml
+++ b/charts/oai-5g-core/oai-nrf/templates/pvc.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.includeTcpDumpContainer }}
 {{- if .Values.persistent.sharedvolume }}
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -6,8 +7,13 @@ metadata:
 spec:
   accessModes:
     - ReadWriteMany
-  storageClassName: {{ .Values.persistent.volumeName }}
+{{- if .Values.persistent.storageClass }}
+  storageClassName: ""
+{{- else }}
+  storageClassName: "{{ .Values.persistent.storageClass }}"
+{{- end }}
   resources:
     requests:
       storage: {{ .Values.persistent.size }}
+{{- end }}
 {{- end }}
