--- a/charts/oai-5g-core/oai-nrf/values.yaml
+++ b/charts/oai-5g-core/oai-nrf/values.yaml
@@ -1,15 +1,9 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution
+kubernetesType: Vanilla  # Vanilla (Community Kubernetes) or Openshift (For RedHat Openshift)
 
 # NF image
 nfimage:
   repository: docker.io/oaisoftwarealliance/oai-nrf
-  version: v1.5.0 #image tag, develop tag for experimental features 
-  # pullPolicy: IfNotPresent or Never or Always
-  pullPolicy: IfNotPresent
-
-tcpdumpimage:
-  repository: corfr/tcpdump
-  version: latest
+  version: develop #image tag, develop tag for experimental features 
   # pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
@@ -30,28 +24,40 @@ podSecurityContext:
   runAsUser: 0
   runAsGroup: 0
 
-securityContext:
-  privileged: false
-
-#service type is fixed to clusterIP
-
-start:
-  nrf: true
-  tcpdump: false #start tcpdump collection to analyse but beware it will take a lot of space in the container/persistent volume
-
-# create multus interface in case the NRF wants to use a separate interface 
-# than kubernetes general CNI or it needs to be accessed from outside cluster network using ip-address (please use amf multus.yaml as an example). 
-
 config:
   nrfInterfaceNameForSBI: "eth0" # net1 if multus.create is set true
   nrfInterfacePortForSBI: "80"
   nrfInterfaceHttp2PortForSBI: "8080"
   nrfApiVersion: "v1"
+  logLevel: "debug"   
 
-persistent:
-  sharedvolume: false
-  volumeName: managed-nfs-storage
-  size: 1Gi
+## Debugging section
+start:
+  nrf: true #If false the network function container will run in sleep mode for manually testing
+
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+
+# Un-comment the below lines if includeTcpDumpContainer is true
+# tcpdumpimage:
+#   repository: docker.io/corfr/tcpdump
+#   version: latest
+#   #pullPolicy: IfNotPresent or Never or Always
+#   pullPolicy: IfNotPresent
+
+
+# securityContext:
+#   # capabilities:   #Only needed when capturing packets inside the tcp container
+#   #   add: 
+#   #    - NET_ADMIN
+#   #   drop: 
+#   #    - ALL
+#   privileged: false
+
+# To store PCAP of NF in a sharedVolume so it can be easily fetched
+# persistent:
+#   sharedvolume: true
+#   #storageClass: managed-nfs-storage #If commented default storageClass will be used
+#   size: 1Gi
 
 resources:
   define: false
@@ -70,12 +76,12 @@ resources:
       cpu: 100m
       memory: 128Mi
 
-terminationGracePeriodSeconds: 5
-
 readinessProbe: true
 
 livenessProbe: false
 
+terminationGracePeriodSeconds: 5
+
 nodeSelector: {}
 
-nodeName: 
+nodeName:
