--- a/charts/oai-5g-core/oai-smf/values.yaml
+++ b/charts/oai-5g-core/oai-smf/values.yaml
@@ -1,14 +1,8 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution
+kubernetesType: Vanilla  # Vanilla (Community Kubernetes) or Openshift (For RedHat Openshift)
 
 nfimage:
   repository: docker.io/oaisoftwarealliance/oai-smf          # dockerhub oaisoftwarealliance/oai-smf
-  version: v1.5.0    #image tag, develop tag for experimental features 
-  #pullPolicy: IfNotPresent or Never or Always
-  pullPolicy: IfNotPresent
-
-tcpdumpimage:
-  repository: docker.io/corfr/tcpdump
-  version: latest
+  version: develop    #image tag, develop tag for experimental features 
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
@@ -27,15 +21,9 @@ podSecurityContext:
   runAsUser: 0
   runAsGroup: 0
 
-securityContext:
-  privileged: false   # Make it true only if you want to capture packets inside tcpdump container
-
 #service type is fixed to clusterIP, it is only support for non multus interface (eth0)
 
-# Just for debugging
-start:
-  smf: true
-  tcpdump: false  #start tcpdump collection to analyse but beware it will take a lot of space in the container/persistent volume
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
 # SMF needs two seperate interface one for http and other one for N4 to communicate with UPD. 
 # But for experimentation only one interface can be used. 
@@ -93,12 +81,31 @@ config:
   sessionAmbrDl1: "1000Mbps"
 
 
-## currently only used by tcpdump container to store the tcpdump, this volume will be shared between all the network functions (If true it should be true for all the NFs specially NRF)
-persistent:
-  sharedvolume: false  # should be true when if wants to store the tcpdump of all the network functions at same place
-  volumneName: managed-nfs-storage
-  size: 1Gi
+## Debugging section
+start:
+  smf: true #If false the network function container will run in sleep mode for manually testing
 
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+
+# Un-comment the below lines if includeTcpDumpContainer is true
+# tcpdumpimage:
+#   repository: docker.io/corfr/tcpdump
+#   version: latest
+#   #pullPolicy: IfNotPresent or Never or Always
+#   pullPolicy: IfNotPresent
+
+
+# securityContext:
+#   # capabilities:   #Only needed when capturing packets inside the tcp container
+#   #   add: 
+#   #    - NET_ADMIN
+#   #   drop: 
+#   #    - ALL
+#   privileged: false
+
+# To store PCAP of NF in a sharedVolume so it can be easily fetched
+# persistent:
+#   sharedvolume: true
 
 resources:
   define: false
@@ -118,10 +125,11 @@ resources:
       memory: 128Mi
 
 readinessProbe: true
+
 livenessProbe: false
 
 terminationGracePeriodSeconds: 5
 
 nodeSelector: {}
 
-nodeName: 
+nodeName:
