--- a/charts/oai-5g-core/oai-udm/values.yaml
+++ b/charts/oai-5g-core/oai-udm/values.yaml
@@ -1,14 +1,8 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution
+kubernetesType: Vanilla  # Vanilla (Community Kubernetes) or Openshift (For RedHat Openshift)
 
 nfimage:
   repository: docker.io/oaisoftwarealliance/oai-udm         
-  version: v1.5.0                        #image tag, develop tag for experimental features 
-  #pullPolicy: IfNotPresent or Never or Always
-  pullPolicy: IfNotPresent
-
-tcpdumpimage:
-  repository: docker.io/corfr/tcpdump
-  version: latest
+  version: develop                        #image tag, develop tag for experimental features 
   #pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
@@ -29,18 +23,14 @@ podSecurityContext:
 
 #service type is fixed to clusterIP, it is only support for non multus interface (eth0)
 
-securityContext:
-  privileged: false
-
-start:
-  udm: true
-  tcpdump: false
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
 config:
   tz: "Europe/Paris"
   instance: 0
   pidDirectory: "/var/run"
   udmName: "oai-udm"
+  logLevel: "debug"
   sbiIfName: "eth0"
   sbiPortHttp1: "80"
   sbiPortHttp2: "8080"
@@ -57,10 +47,30 @@ config:
   nrfApiVersionNb: "v1"   #Nb means northbound
   nrfFqdn: "oai-nrf-svc"
 
-persistence:
-  sharedvolume: false
-  volumneName: managed-nfs-storage
-  size: 1Gi
+## Debugging section
+start:
+  udm: true #If false the network function container will run in sleep mode for manually testing
+
+includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+
+# Un-comment the below lines if includeTcpDumpContainer is true
+# tcpdumpimage:
+#   repository: docker.io/corfr/tcpdump
+#   version: latest
+#   #pullPolicy: IfNotPresent or Never or Always
+#   pullPolicy: IfNotPresent
+
+# securityContext:
+#   # capabilities:   #Only needed when capturing packets inside the tcp container
+#   #   add: 
+#   #    - NET_ADMIN
+#   #   drop: 
+#   #    - ALL
+#   privileged: false
+
+# To store PCAP of NF in a sharedVolume so it can be easily fetched
+# persistent:
+#   sharedvolume: true
 
 resources:
   define: false
@@ -87,4 +97,4 @@ terminationGracePeriodSeconds: 5
 
 nodeSelector: {}
 
-nodeName: 
+nodeName:
