--- a/charts/oai-5g-ran/oai-gnb-du/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/values.yaml
@@ -42,22 +42,20 @@ start:
   gnbdu: true
   tcpdump: false
 
-# gNB needs two seperate interface one for ngap (N2) and other one for gtpu (N3)
-# But for experimentation only one interface can be used.
-# When you need multus:
-# 1. you want seperate interface for N2 and N3
-# 2. You want static ip-address for N2 and N3 interface
-# 3. Different interfaces for different packets
-
-multus:    # needed when gnB service will run on another interface rather than traditional eth0
-  create: false
-  f1IPadd: "172.21.6.17"
-  f1Netmask: "22"
-  defaultGateway: "172.21.7.254"
-  f1HostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
-  rruInterfaceIpadd: "192.168.80.95"
-  rruInterfaceNetmask: "24"
-  rruHostInterface: "bond1"
+# du needs two seperate interfaces one for ru, f1 
+multus:
+  f1Interface:
+    create: false
+    IPadd: "172.21.6.26"
+    Netmask: "22"
+    defaultGateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  ruInterface:            #Only needed if using a ethernet based RU/USRP
+    create: false
+    IPadd: "192.168.80.90"
+    Netmask: "24"
+    defaultGateway: "192.168.80.1"  #In case you don't have a gateway remove it from here
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
 config:
   mountConfig: false          #If config file is mounted then please edit mount.conf in configmap.yaml properly 
