--- a/charts/oai-5g-ran/oai-gnb/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb/values.yaml
@@ -51,13 +51,28 @@ start:
 # 2. You want static ip-address for N2 and N3 interface
 # 3. Different interfaces for different packets
 
-multus:    # needed when gnB service will run on another interface rather than traditional eth0
-  create: false
-  n2n3IPadd: "172.21.6.203"
-  n2n3Netmask: "22"
-  defaultGateway: "172.21.7.254"
-  hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+multus:
+  n2Interface:
+    create: false
+    IPadd: "172.21.6.16"
+    Netmask: "22"
+    defaultGateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  n3Interface:
+    create: false
+    IPadd: "172.21.6.17"
+    Netmask: "22"
+    defaultGateway: "172.21.7.254"
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
+  ruInterface:            #Only needed if using a ethernet based RU/USRP
+    create: false
+    IPadd: "192.168.80.90"
+    Netmask: "24"
+    defaultGateway: "192.168.80.1"  #In case you don't have a gateway remove it from here
+    hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
+## If you want to change more configuration parameters then you can mount the config file or use it from 
+# here https://gitlab.eurecom.fr/oai/openairinterface5g/-/tree/develop/targets/PROJECTS/GENERIC-NR-5GC/CONF 
 config:
   mountConfig: false          #If config file is mounted then please edit mount.conf in configmap.yaml properly 
   useSATddMono: true
